Fixing #6
. Kill autoscroll and go back to a previous design iteration with arrows to go "next" and "previous"
. Clipped corners for design consistency
. Fix height of the items and keep consistent

--- a/css/style.css
+++ b/css/style.css
@@ -621,39 +621,47 @@ ul.compare-buy-now-buttons.list-unstyled {
   padding: 80px 0 120px;
 }
 #video-walkthroughs {
-  margin: 83px 0 0;
+  margin: 40px 0 0;
 }
 #video-walkthroughs .item-video {
-  padding: 0 15px;
-  clip-path: polygon(
-    20% 0%,
-    80% 0%,
-    100% 20%,
-    100% 80%,
-    80% 100%,
-    20% 100%,
-    0% 80%,
-    0% 20%
-  );
+  display: flex;
+  justify-content: center;
+}
+#video-walkthroughs .item-video .video-middle {
+  width: 350px;
+  height: 350px;
+  clip-path: path('M33.0282 4.36649C35.8391 1.56991 39.6428 7.10535e-09 43.6078 1.97625e-08L306.392 8.58622e-07C310.357 8.71279e-07 314.161 1.5699 316.972 4.36647L345.58 32.8293C348.409 35.6445 350 39.4714 350 43.4629V306.537C350 310.529 348.409 314.355 345.58 317.171L316.972 345.634C314.161 348.43 310.357 350 306.392 350H43.6078C39.6428 350 35.8391 348.43 33.0282 345.634L4.42039 317.171C1.59084 314.355 0 310.529 0 306.537V43.4629C0 39.4714 1.59083 35.6445 4.42038 32.8293L33.0282 4.36649Z')
 }
 #video-walkthroughs .item-video .video-box {
+  height: 150px;
   filter: grayscale(100%);
 }
 #video-walkthroughs .item-video:hover .video-box {
   filter: grayscale(0);
 }
 #video-walkthroughs .item-video .text-caption {
+  height: 200px;
   background-color: #eff1f2;
-  padding: 15px 35px 35px;
+  padding: 2% 4%;
 }
 #video-walkthroughs .item-video .text-caption h3 {
-  font-size: 22px;
+  font-size: 20px;
   color: #000;
   font-family: "GT Planar Trial Bl";
 }
 #video-walkthroughs .item-video .text-caption h4 {
   font-size: 23px;
   color: #000;
+}
+#video-walkthroughs .slick-arrow {
+  background: transparent;
+  border: none;
+  position: absolute;
+  top: -115px;
+  margin: 0 22px;
+}
+#video-walkthroughs .slick-next {
+  right: 0;
 }
 footer {
   background-color: #000;
